Fix spacing if transcript not enabled

--- a/web/app/themes/ecommerce-influence/src/css/blocks/episode.scss
+++ b/web/app/themes/ecommerce-influence/src/css/blocks/episode.scss
@@ -1,6 +1,6 @@
 .episode{
 	position: relative;
-	padding-bottom: 50px;
+	//padding-bottom: 50px;
 
 	width: 100%;
 
@@ -179,7 +179,7 @@
 .episode__content{
 	position: relative;
 	margin-top: 20px;
-	padding-bottom: 20px;
+	//padding-bottom: 20px;
 
     //&--transcript {
     //    display: none;
@@ -443,9 +443,11 @@
 
 
 /* Transcript */
-.episode__transcript {
-    margin-top: 32px;
+.transcript {
+    margin: 80px 0 56px 0;
+}
 
+.episode__transcript {
     display: flex;
     align-items: center;
 }
